--- a/Telekomunikacije/Web.config
+++ b/Telekomunikacije/Web.config
@@ -21,6 +21,19 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
+
+
+    <!--<roleManager enabled ="true"
+               defaultProvider ="SqlRoleProvider" >
+      <providers>
+        <add name ="SqlRoleProvider"
+             type="System.Web.Security.SqlRoleProvider"
+             connectionStringName="DefaultConnection"
+             applicationName="Telekomunikacije"/>
+      </providers>
+    </roleManager>-->
+    
+    
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
