--- a/Telekomunikacije/Telekomunikacije.csproj
+++ b/Telekomunikacije/Telekomunikacije.csproj
@@ -225,6 +225,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\GroupedUserViewModel.cs" />
+    <Compile Include="ViewModels\UserRoleManageViewModel.cs" />
     <Compile Include="ViewModels\UserRoleViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
